--- a/build.gradle
+++ b/build.gradle
@@ -3,46 +3,46 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 
 //build stuff
-sourceCompatibility=1.6
-targetCompatibility=1.6
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 configurations {
-  cucumberRuntime {
-    extendsFrom testRuntime
-    jar.archivePath
-  }
-}
-
-task cucumber {
-  dependsOn assemble
-
-  doLast {
-      println configurations.cucumberRuntime.asPath
-      println jar.archivePath
-      println "BLARG"
-    ant.java(
-      fork: true,
-      classname: "cucumber.cli.Main",
-      classpath: configurations.cucumberRuntime.asPath,
-      failOnError: true
-      ) {
-      arg value:"-f"
-      arg value:"pretty"
-      arg value:"--glue"
-      arg value:"src/test/groovy"
-      arg value:"src/test/resources"
+    cucumberRuntime {
+        extendsFrom testRuntime
     }
-  }
 }
-dependencies {
-  // Groovy library for groovy building!
-  groovy 'org.codehaus.groovy:groovy-all:2.0.0-beta-2'
 
-  testCompile 'junit:junit:4.10'
-  testCompile 'info.cukes:cucumber-junit:1.0.0.RC15'
-  testCompile 'info.cukes:cucumber-groovy:1.0.0.RC15'
+task cucumber() {
+    dependsOn assemble
+    doLast {
+        javaexec {
+            main = "cucumber.cli.Main"
+            classpath = configurations.cucumberRuntime
+            args = ['-f', 'pretty', '--glue', 'src/test/groovy', 'src/test/resources']
+
+        }
+    }
+}
+
+dependencies {
+    // Groovy library for groovy building!
+    groovy 'org.codehaus.groovy:groovy-all:2.0.0-beta-2'
+
+    /*
+   In order to work around a really flagrant bug ( http://issues.gradle.org/browse/GRADLE-732 )
+   You have to create a configuration that includes the jar.archivePath (the jar.archivePath is created by the java plugin)
+   and give it the same name as the cucumberRuntime configuration, or name it something different and have the cucumberRuntime
+   configuration extend from it as well.
+
+   VERY ANNOYING BUG
+    */
+    cucumberRuntime files("${jar.archivePath}")
+
+    testCompile 'junit:junit:4.10'
+    testCompile 'info.cukes:cucumber-junit:1.0.0.RC15'
+    testCompile 'info.cukes:cucumber-groovy:1.0.0.RC15'
 }
 
 repositories {
-  mavenCentral()
+    mavenCentral()
 }
