Updating the groovy project to the latest version.
Works with gradle 1.0.

I wasn't able to use a classpath specified groovy path here.
Not sure why, but the specified path from the project root works fine.

--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     cucumberRuntime files("${jar.archivePath}")
 
     testCompile 'junit:junit:4.10'
-    testCompile 'info.cukes:cucumber-junit:1.0.0.RC15'
-    testCompile 'info.cukes:cucumber-groovy:1.0.0.RC15'
+    testCompile 'info.cukes:cucumber-junit:1.0.9'
+    testCompile 'info.cukes:cucumber-groovy:1.0.9'
 }
 
 repositories {
